<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trippy Trips</string>
    <string name="welcome_text">Welcome to\n\nTrippy Trips!</string>
    <string name="welcome_instructions">Please log in or sign up to get started!</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="temp_go_to_home">TEMP: Go to Home</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="please_click_the_button_below_to_delete_your_account">Please click the button below to delete your account!</string>
    <string name="delete_account">Delete Account</string>
    <string name="this_action_cannot_be_reversed">This action cannot be reversed!</string>
    <string name="home">HOME</string>
    <string name="enter_new_password_here">Enter new password here</string>
    <string name="welcome_illustration_desc">Travel destinations collage</string>
    <string name="welcome_headline"><![CDATA[Your next trip<br/>starts <font color="@color/gold"><b>here</b></font>]]></string>
    <string name="welcome_instructions_detailed">Plan your perfect getaway with Trippy Trips. Explore destinations, and find great places to stay and things to do.</string>
    <string name="app_logo">App logo</string>
    <string name="get_started">Get Started</string>
    <string name="log_out">Log Out</string>
    <string name="please_click_below_to_uninstall_this_app">Please click below to uninstall this app!</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="_1_traveler">1 Traveler</string>
</resources>
